--- a/AGC/AGC.vcxproj.filters
+++ b/AGC/AGC.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="ObjEnemyBoss.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="ObjStag.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameL\Audio.h">
@@ -129,6 +132,9 @@
       <Filter>ソース ファイル</Filter>
     </ClInclude>
     <ClInclude Include="ObjEnemyBoss.h">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Objstag.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
   </ItemGroup>
