--- a/AGC/AGC.vcxproj.filters
+++ b/AGC/AGC.vcxproj.filters
@@ -72,7 +72,7 @@
     <ClCompile Include="ObjEnemyBoss.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="ObjStag.cpp">
+    <ClCompile Include="ObjStage.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
