--- a/AGC/AGC.vcxproj.filters
+++ b/AGC/AGC.vcxproj.filters
@@ -69,10 +69,19 @@
     <ClCompile Include="CObjBullet.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="ObjStage.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="ObjTime.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
     <ClCompile Include="ObjEnemyBoss.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="ObjStage.cpp">
+    <ClCompile Include="CObjMediumBoss.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="CObjSpecialEnemy.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -134,7 +143,10 @@
     <ClInclude Include="ObjEnemyBoss.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="Objstag.h">
+    <ClInclude Include="CObjMediumBoss.h">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="CObjSpecialEnemy.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
   </ItemGroup>
